2009-01-27 [paul]	3.7.0cvs43

	* src/folder.c
		fix crash when right-clicking in summaryview when
		processing is active

2009-01-22 [colin]	3.7.0cvs42

	* src/compose.c
	* src/privacy.c
	* src/privacy.h
		When replying to signed/encrypted mail and the
		preference to sign/encrypt in this case is set,
		choose the original mail's privacy system (if
		available).

2009-01-21 [colin]	3.7.0cvs41

	* src/addressbook.h
		Fix warning (on-the-fly theming of
		addressbook isn't complete yet)

2009-01-21 [colin]	3.7.0cvs40

	* src/account.c
	* src/addressbook.c
		Win32: Fix window placement

2009-01-21 [paul]	3.7.0cvs39

	* src/inc.c
		update timeout log msg

2009-01-17 [colin]	3.7.0cvs38

	* src/main.c
	* src/mbox.c
	* src/common/md5.c
	* src/common/utils.c
	* src/etpan/imap-thread.c
		Fix g_open calls (which don't ignore mode)

2009-01-17 [colin]	3.7.0cvs37

	* src/addressbook.c
	* src/compose.c
	* src/foldersel.c
	* src/main.c
	* src/mainwindow.c
	* src/mbox.c
	* src/common/md5.c
	* src/common/ssl_certificate.c
	* src/common/tags.c
	* src/common/utils.c
	* src/etpan/imap-thread.c
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/smime/smime.c
		Probably fix bug 1825, 'Unable to fetch messages from 
		IMAP folders named with non-ASCII string'
		Change remaining occurences of fopen and open with
		g_fopen and g_open

2009-01-17 [paul]	3.7.0cvs36

	* manual/faq.xml
		update an old, outdated piece of info

2009-01-17 [paul]	3.7.0cvs35

	* src/prefs_folder_item.c
		fix bug where saving Folder Properties of a
		sub-folder of outbox, queue, draft or trash
		would change its parent's folder type to normal

2009-01-12 [mones]	3.7.0cvs34

	* po/es.po
		Updated translation

2009-01-12 [wwp]	3.7.0cvs33

	* tools/fix_date.sh
	* tools/popfile-link.sh
	* tools/textviewer.sh
		Fix bashisms and other portability glitches (thanks to
		Steven M. Bellovin).

2009-01-11 [paul]	3.7.0cvs32

	* src/addrindex.c
		clean up some build warnings
